examples/datalog/14_aggregations/14_multiple_aggregates.dl.out
Executing script: examples/datalog/14_aggregations/14_multiple_aggregates.dl

> .db create test_multi_agg
Database 'test_multi_agg' created.
Switched to database: test_multi_agg
> .db use test_multi_agg
Switched to database: test_multi_agg
> +employees[(1, 101, 50000), (1, 102, 60000), (1, 103, 55000), (2, 201, 70000), (2, 202, 80000), (3, 301, 45000), (3, 302, 48000), (3, 303, 52000), (3, 304, 47000)].
Inserted 9 facts into 'employees'.
> +dept_count(Dept, count<Emp>) :- employees(Dept, Emp, _).
Script error: Line 14: Parse error: Invalid term: 'count<Emp>'
